chore:构建v1.1.6beta3